--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -168,6 +168,8 @@
     <string name="alfin_coins">Alfin Coins</string>
     <string name="transaction_history">Transaction History</string>
     <string name="active_bid_detail_desc">20L Semi Automatic  worth Rs. 12000</string>
+    <string name="no_network_error">no network</string>
+    <string name="sorry_error_found_please_try_again_">some thing wrong</string>
 
 
 </resources>
