--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,4 +185,8 @@ Alfin will take all steps reasonably necessary to ensure that your data is treat
     <string name="active_bid_detail_desc"><![CDATA[<p align="justify">20L Semi Automatic \nworth<font color=\'#fd7000\'>Rs. 12000</font></p>]]></string>
     <string name="no_network_error">no network</string>
     <string name="sorry_error_found_please_try_again_">some thing wrong</string>
+    <string name="confirm">Confirm</string>
+    <string name="exit_text">Are you sure want to exit?</string>
+    <string name="cancel">cancel</string>
+    <string name="yes">Yes</string>
 </resources>
