--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -174,6 +174,9 @@
     <string name="exit_text">Are you sure want to exit?</string>
     <string name="cancel">cancel</string>
     <string name="yes">Yes</string>
+    <string name="sms_permission_error_message">We dont have access to your SMS so you cannot earn Alfin coins on your account balance, Give access and earn Alfin coins.</string>
+    <string name="give_access">GIVE ACCESS</string>
+    <string name="you_earned">You earned</string>
 
 
 </resources>
